--- a/docker/camprnettes.yaml
+++ b/docker/camprnettes.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod 
 metadata:
-  name: campRnetTs       # What your Kubernetes pod will be called
+  name: camprt      # What your Kubernetes pod will be called
   namespace: awentze2 # The namespace to run your pod in
 spec:
   containers:
@@ -11,7 +11,7 @@ spec:
     name: camprt    # Name of your container inside your pod
   volumeMounts:
     - name: nfs-volume
-      mountPath: /target/directory/to/mount/to/in/container
+      mountPath: /mnt
   volumes:
   - name: nfs-volume
     nfs:
