modified docker file

--- a/docker/camprnettes.yaml
+++ b/docker/camprnettes.yaml
@@ -5,16 +5,8 @@ metadata:
   namespace: awentze2 # The namespace to run your pod in
 spec:
   containers:
-  - image: camprt     # Name of the Docker image you want to run
+  - image: iridium.evl.uic.edu:5000/camprt     # Name of the Docker image you want to run
     args: ["sleep", "infinity"]
-    imagePullPolicy: IfNotPresent 
+    imagePullPolicy: Always
     name: camprt    # Name of your container inside your pod
-  volumeMounts:
-    - name: nfs-volume
-      mountPath: /mnt
-  volumes:
-  - name: nfs-volume
-    nfs:
-      server: iridium.evl.uic.edu
-      path: /data/docker_nfs/andrew
   restartPolicy: Always
